# Raytracer

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
TestPrograms/: BasicTests.cpp  CMakeLists.txt  ConcentricGlassSpheres.cpp  ballProjection.cpp  ballWorld.cpp  build_tests.sh  clock.cpp  projectile.cpp
libraries/: CMakeLists.txt
libraries/Canvas/: CMakeLists.txt
libraries/Canvas/include/: Canvas.hpp
libraries/Canvas/src/: Canvas.cpp
libraries/Geometry/: CMakeLists.txt
libraries/Geometry/include/: Cone.hpp  Cube.hpp  Cylinder.hpp  Group.hpp  Intersections.hpp  Plane.hpp  Shape.hpp  ShapeT.hpp  Sphere.hpp
libraries/Geometry/src/: Cone.cpp  Cube.cpp  Cylinder.cpp  Group.cpp  Intersections.cpp  Plane.cpp  Shape.cpp  Sphere.cpp
libraries/Material/: CMakeLists.txt
libraries/Material/include/: Material.hpp  Pattern.hpp
libraries/Material/src/: Material.cpp  Pattern.cpp
libraries/Pattern/: CMakeLists.txt
libraries/Pattern/include/: CheckerPattern.hpp  GradientPattern.hpp  Pattern.hpp  PatternT.hpp  PerturbedPattern.hpp  RingPattern.hpp  StripePattern.hpp
libraries/Pattern/src/: CheckerPattern.cpp  GradientPattern.cpp  Pattern.cpp  PerturbedPattern.cpp  RingPattern.cpp  StripePattern.cpp
libraries/Scene/: CMakeLists.txt
libraries/Scene/include/: Camera.hpp  Light.hpp  Renderer.hpp  World.hpp
libraries/Scene/src/: Camera.cpp  Light.cpp  Renderer.cpp  World.cpp
libraries/Utility/: CMakeLists.txt
libraries/Utility/include/: AABB.hpp  Arena.hpp  Color.hpp  FloatAlmostEquals.hpp  FloatUtils.hpp  LinearAllocator.hpp  Matrix.hpp  Ray.hpp  Transformations.hpp  Tuple.hpp
libraries/Utility/src/: Color.cpp  LinearAllocator.cpp  Ray.cpp  Transformations.cpp  Tuple.cpp
src/buildingBlocks/: canvas.cpp  canvas_test.cpp  color.cpp  color_test.cpp  intersections.cpp  maths.cpp  matrix_test.cpp  ray.cpp  sphere.cpp  transformations.cpp  transformations_test.cpp  tuple.cpp  tuple_test.cpp
src/buildingBlocks/include/: canvas.h  color.h  intersections.h  maths.h  matrix.h  ray.h  sphere.h  transformations.h  tuple.h
src/buildingBlocks/tests/: canvas_test.cpp  color_test.cpp  intersections_test.cpp  maths_test.cpp  matrix_test.cpp  ray_test.cpp  sphere_test.cpp  transformations_test.cpp  tuple_test.cpp
src/extras/: ballProjection.cpp  clock.cpp  projectile.cpp
test/: CMakeLists.txt
test/Canvas/: CMakeLists.txt  CanvasTests.cpp
test/Geometry/: CMakeLists.txt  ConeTests.cpp  CubeTests.cpp  CylinderTests.cpp  GroupTests.cpp  IntersectionsTests.cpp  PlaneTests.cpp  ShapeTests.cpp  SphereTests.cpp
test/Material/: CMakeLists.txt  MaterialTests.cpp  PatternTests.cpp
test/Pattern/: CMakeLists.txt  PatternTests.cpp
test/Scene/: CMakeLists.txt  CameraTests.cpp  LightTests.cpp  WorldTests.cpp
test/Utility/: AABB.cpp  ArenaTests.cpp  CMakeLists.txt  ColorTests.cpp  FloatAlmostEqualsTests.cpp  FloatUtilsTests.cpp  LinearAllocatorTests.cpp  MatrixTests.cpp  RayTests.cpp  TransformationsTests.cpp  TupleTests.cpp
